--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node api/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node-fetch": "^2.6.12"
   }
 }
