--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "start": "node api/index.js"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "node-fetch": "^2.6.12",
-    "dotenv": "^16.4.5"
+    "node-fetch": "^2.6.12"
   }
 }
