--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "node-fetch": "^2.6.12"
